install/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cluster-pool-monitor
  name: cluster-pool-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-pool-monitor
  template:
    metadata:
      labels:
        app: cluster-pool-monitor
    spec:
      containers:
      - command:
        - /usr/local/bin/cluster-pool-monitor
        image: quay.io/sjenning/cluster-pool-monitor:latest
        imagePullPolicy: Always
        name: cluster-pool-monitor
        volumeMounts:
        - mountPath: /etc/kubernetes
          name: cluster-pool-kubeconfig
        - mountPath: /etc/aws
          name: s3-aws-creds
          readOnly: true
      volumes:
      - name: cluster-pool-kubeconfig
        secret:
          secretName: cluster-pool-kubeconfig
      - name: s3-aws-creds
        secret:
          secretName: s3-aws-creds
