install/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cluster-pool-monitor
  name: cluster-pool-monitor
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cluster-pool-monitor
  type: ClusterIP
