install/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cluster-pool-monitor
  name: cluster-pool-monitor
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: cluster-pool-monitor
